--- a/applications/python-web-app/Jenkinsfile
+++ b/applications/python-web-app/Jenkinsfile
@@ -21,7 +21,7 @@ pipeline {
                 container('kaniko') {
                     script {
                         sh '''
-			/kaniko/executor --context /home/jenkins/agent/workspace/python-app/applications/python-web-app --dockerfile Dockerfile --destination docker.io/suleonal/python-web-app:1.0.0
+			/kaniko/executor --context /home/jenkins/agent/workspace/python-app/applications/python-web-app --dockerfile Dockerfile --destination https://index.docker.io/v1/suleonal/python-web-app:1.0.0
                         '''
                     }
                 }
