--- a/applications/python-web-app/Jenkinsfile
+++ b/applications/python-web-app/Jenkinsfile
@@ -1,9 +1,10 @@
 pipeline {
     agent any
     environment {
-        APP_NAME = "python-app"
+        APP_NAME = "python-web-app"
         REPOSITORY = "https://github.com/suleonal/python-web-app.git"
         VERSION = "1.0.${env.BUILD_ID}"
+	IMAGE = ""
         FULL_CHART_NAME = "${APP_NAME}-${VERSION}.tgz"
     }
     stages {
@@ -16,16 +17,49 @@ pipeline {
                 }
             }
         }
-	stage('Kaniko Build & Push Image') {
+	/*stage('Kaniko Build & Push Image') {
             steps {
                 container('kaniko') {
                     script {
                         sh '''
-			/kaniko/executor --context /home/jenkins/agent/workspace/python-app/applications/python-web-app --dockerfile Dockerfile --destination https://index.docker.io/v1/suleonal/python-web-app:1.0.0
+			/kaniko/executor --context 'pwd' --dockerfile 'pwd'/Dockerfile  --destination https://index.docker.io/v1/suleonal/python-web-app:1.0.1
                         '''
                     }
                 }
             }
+        }*/
+	stage('Fetch Git Version') {
+            steps {
+                script {
+                    env.GIT_COMMIT_SHORT = sh(script: "git rev-parse --short HEAD", returnStdout: true).trim()
+                    env.APP_VERSION = sh(script: "./mvnw -Dexec.executable='echo' -Dexec.args='\${project.version}' --non-recursive exec:exec -q", returnStdout: true).trim()
+
+                    def majorMinor = env.APP_VERSION.split("\\.")[0] + "." + env.APP_VERSION.split("\\.")[1]
+                    env.MAJOR_MINOR_VERSION = majorMinor
+
+                    if (env.BRANCH_NAME == 'master') {
+                        env.DOCKER_TAGS = "${env.APP_VERSION},${env.GIT_COMMIT_SHORT},${env.MAJOR_MINOR_VERSION},latest"
+                    } else {
+                        env.DOCKER_TAGS = "${env.GIT_COMMIT_SHORT}"
+                    }
+
+                    echo "Application Version: ${env.APP_VERSION}"
+                    echo "Major Minor Version: ${env.MAJOR_MINOR_VERSION}"
+                    echo "Docker Tags: ${env.DOCKER_TAGS}"
+                }
+            }
         }
+        stage('Kaniko Build & Push Image') {
+            steps {
+                container('kaniko') {
+                    script {
+                        env.DOCKER_TAGS.split(",").each { tag ->
+                            sh """
+                            /kaniko/executor --context $(pwd) --dockerfile $(pwd)/Dockerfile --destination docker.io/${env.DOCKER_REPO}:${tag}
+                            """
+                        }
+                    }
+                }
+            }
     }
 }
