--- a/applications/python-web-app/Jenkinsfile
+++ b/applications/python-web-app/Jenkinsfile
@@ -32,16 +32,14 @@ pipeline {
             steps {
                 script {
                     env.GIT_COMMIT_SHORT = sh(script: "git rev-parse --short HEAD", returnStdout: true).trim()
-                    env.APP_VERSION = sh(script: "./mvnw -Dexec.executable='echo' -Dexec.args='\${project.version}' --non-recursive exec:exec -q", returnStdout: true).trim()
+                    env.APP_VERSION = "1.0.0" 
 
                     def majorMinor = env.APP_VERSION.split("\\.")[0] + "." + env.APP_VERSION.split("\\.")[1]
                     env.MAJOR_MINOR_VERSION = majorMinor
 
-                    if (env.BRANCH_NAME == 'master') {
-                        env.DOCKER_TAGS = "${env.APP_VERSION},${env.GIT_COMMIT_SHORT},${env.MAJOR_MINOR_VERSION},latest"
-                    } else {
-                        env.DOCKER_TAGS = "${env.GIT_COMMIT_SHORT}"
-                    }
+            	    env.GIT_COMMIT_SHORT = sh(script: "git rev-parse --short HEAD", returnStdout: true).trim()
+
+                    env.DOCKER_TAGS = "${env.APP_VERSION},${env.GIT_COMMIT_SHORT},${env.MAJOR_MINOR_VERSION},latest"
 
                     echo "Application Version: ${env.APP_VERSION}"
                     echo "Major Minor Version: ${env.MAJOR_MINOR_VERSION}"
