--- a/applications/python-web-app/Jenkinsfile
+++ b/applications/python-web-app/Jenkinsfile
@@ -52,9 +52,9 @@ pipeline {
                 container('kaniko') {
                     script {
                         env.DOCKER_TAGS.split(",").each { tag ->
-                            sh """
-                            /kaniko/executor --context $(pwd) --dockerfile $(pwd)/Dockerfile --destination docker.io/${env.DOCKER_REPO}:${tag}
-                            """
+                            sh '''
+                            /kaniko/executor --context /home/jenkins/agent/workspace/python-app --dockerfile Dockerfile --destination docker.io/${env.DOCKER_REPO}:${tag}
+                            '''
                         }
                     }
                 }
