--- a/applications/python-web-app/Jenkinsfile
+++ b/applications/python-web-app/Jenkinsfile
@@ -49,9 +49,9 @@ pipeline {
                 container('kaniko') {
                     script {
 			    echo "Docker Repo: ${env.DOCKER_REPO}"
-                            echo "Tag: ${tag}"
+                            echo "Tag: ${env.DOCKER_TAGS}"
                             sh '''
-                            /kaniko/executor --context /home/jenkins/agent/workspace/python-app --dockerfile Dockerfile --destination docker.io/${env.DOCKER_REPO}:${tag}
+                            /kaniko/executor --context /home/jenkins/agent/workspace/python-app --dockerfile Dockerfile --destination docker.io/${env.DOCKER_REPO}:${env.DOCKER_TAGS}
                             '''
                     }
                 }
