--- a/applications/python-web-app/Jenkinsfile
+++ b/applications/python-web-app/Jenkinsfile
@@ -50,8 +50,9 @@ pipeline {
                     script {
 			    echo "Docker Repo: ${env.DOCKER_REPO}"
                             echo "Tag: ${env.DOCKER_TAGS}"
+			    def image = "docker.io/${env.DOCKER_REPO}:${env.DOCKER_TAGS}"
                             sh '''
-                            /kaniko/executor --context /home/jenkins/agent/workspace/python-app --dockerfile Dockerfile --destination docker.io/${env.DOCKER_REPO}:${env.DOCKER_TAGS}
+                            /kaniko/executor --context /home/jenkins/agent/workspace/python-app --dockerfile Dockerfile --destination ${image}
                             '''
                     }
                 }
