--- a/applications/python-web-app/Jenkinsfile
+++ b/applications/python-web-app/Jenkinsfile
@@ -48,11 +48,9 @@ pipeline {
             steps {
                 container('kaniko') {
                     script {
-			    echo "Docker Repo: ${env.DOCKER_REPO}"
-                            echo "Tag: ${env.DOCKER_TAGS}"
 			    def image = "docker.io/${env.DOCKER_REPO}:${env.DOCKER_TAGS}"
-			    echo "Image Tag: ${image}"
-                            sh "/kaniko/executor --context /home/jenkins/agent/workspace/python-app --dockerfile Dockerfile --destination ${image}"
+			    def context = "/home/jenkins/agent/workspace/python-app/applications/python-web-app"
+                            sh "/kaniko/executor --context ${context} --dockerfile ${dockerfile} --destination ${image}"
                     }
                 }
             }
