fix helm package

--- a/applications/python-web-app/Jenkinsfile
+++ b/applications/python-web-app/Jenkinsfile
@@ -60,7 +60,7 @@ pipeline {
             steps {
                 container('helm') {
 	 	    script{
-			sh "pwd"
+			sh "ls /home/jenkins/agent/workspace/python-app/applications/python-web-app/helm/"
                     	sh "helm package /home/jenkins/agent/workspace/python-app/applications/python-web-app/helm/."
 		    }
                 }
