--- a/applications/Jenkinsfile
+++ b/applications/Jenkinsfile
@@ -4,6 +4,7 @@ pipeline {
         APP_NAME = "python-web-app"
         REPOSITORY = "https://github.com/suleonal/python-web-app.git"
 	DOCKER_REPO = 'suleonal/python-web-app'
+	VERSION = "1.0.${env.BUILD_ID}"
         FULL_CHART_NAME = "${APP_NAME}-${VERSION}.tgz"
     }
     stages {
@@ -53,6 +54,21 @@ pipeline {
                     }
                 }
             }
+	}
+	stage('Modify Helm Values') {
+	    steps {
+        	script {
+            		def valuesFile = "applications/helm/values.yaml"
+            		def newTag = env.DOCKER_TAGS  // Önceki stage'de oluşturulan Docker tag'ı
+
+            		echo "Updating image tag in Helm values file: ${newTag}"
+
+            		sh """
+            		   sed -i 's|^  tag:.*|  tag: "${newTag}"|' ${valuesFile}
+            		"""
+            		sh "cat ${valuesFile} | grep '  tag:'"
+        	}
+    	    }	
 	}
 	stage('Modify Chart Version') {
             steps {
