--- a/applications/Jenkinsfile
+++ b/applications/Jenkinsfile
@@ -101,7 +101,7 @@ pipeline {
             steps {
                 container('helm') {
                     sh "echo \"@${FULL_CHART_NAME}\""
-                    sh "curl --data-binary \"@${FULL_CHART_NAME}\" http://helm-repo-chartmuseum.default.svc.cluster.local:8080/api/charts"
+                    sh "curl --data-binary \"@applications/helm/${FULL_CHART_NAME}\" http://helm-repo-chartmuseum.default.svc.cluster.local:8080/api/charts"
                 }
             }
         }	
