--- a/applications/Jenkinsfile
+++ b/applications/Jenkinsfile
@@ -102,7 +102,8 @@ pipeline {
                 container('helm') {
                     sh "echo \"@${FULL_CHART_NAME}\""
 		    sh "cd applications/helm"
-                    sh "curl --data-binary \"${FULL_CHART_NAME}\" -H "Content-Type: application/x-gzip" http://helm-repo-chartmuseum.default.svc.cluster.local:8080/api/charts"
+		    sh "curl --data-binary \"${FULL_CHART_NAME}\" -H \"Content-Type: application/x-gzip\" http://helm-repo-chartmuseum.default.svc.cluster.local:8080/api/charts"
+
                 }
             }
         }	
