--- a/applications/helm/values.yaml
+++ b/applications/helm/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 
 image:
-  repository: suleonal/python-app
+  repository: suleonal/python-web-app
   tag: "1.0.6"
   pullPolicy: IfNotPresent
 
@@ -14,7 +14,7 @@ redis:
   port: 6379
 
 service:
-  port: 5000              # Kubernetes dışına açılacak port (LoadBalancer veya NodePort)
+  port: 5000
   targetPort: 5000
-  nodePort: 30010
+  nodePort: 30004
   type: NodePort
